# pbrt

./: 0  Cargo.toml  README.md
sence/: template.json
src/: main.rs
src/lib/: mod.rs
src/lib/bxdf/: mod.rs  reflect.rs
src/lib/camera/: mod.rs  orthographic.rs  perspective.rs
src/lib/integrator/: mod.rs  path.rs
src/lib/light/: area.rs  mod.rs  point.rs
src/lib/material/: matte.rs  mod.rs
src/lib/primitive/: aggreate.rs  geometric.rs  mod.rs
src/lib/ray/: mod.rs
src/lib/sample/: mod.rs  stratified.rs
src/lib/shape/: disk.rs  mod.rs  shpere.rs  triangle.rs
src/lib/texture/: mod.rs  uvmapping.rs
src/lib/tool/: bound.rs  film.rs  interaction.rs  mod.rs  model.rs  scene.rs  tranform.rs
